Hockey club section done

--- a/index.html
+++ b/index.html
@@ -88,18 +88,34 @@
   </header>
 
   <!-- Club section -->
-  <div class="clubSection container mx-auto py-8 lg:pt-20">
+  <div class="clubSection container mx-auto px-10 py-8 lg:pt-20">
     <div class="text-center flex flex-col items-center py-8 border-y-2 border-dashed">
-      <h1 class="font-extrabold text-3xl pb-5">Professional Hockeys Club</h1>
+      <h1 class="font-extrabold text-2xl lg:text-3xl pb-5">Professional Hockeys Club</h1>
       <p class="opacity-80 lg:w-[60%]">We are an inclusive hockey club that welcomes all who want to play hockey and be
         part of a thriving local sports club.</p>
     </div>
-    <div class="chart">
-      <div class="radial-progress text-primary" style="--value:90;" role="progressbar">70%</div>
-
-      <div class="radial-progress" style="--value:80; --size:6rem; --thickness: 12px;" role="progressbar">70%</div>
-
-      <div class="radial-progress" style="--value:70; --size:12rem; --thickness: 2rem;" role="progressbar">70%</div>
+    <div class="flex flex-col lg:flex-row gap-10 lg:gap-8 p-10 lg:px-0">
+      <div class="flex flex-col items-center text-center gap-5">
+        <div class="radial-progress text-red-500" style="--value:80; --size:6rem; --thickness: 10px;" role="progressbar"><p class="text-black font-extrabold text-2xl">87%</p></div>
+        <h2 class="font-bold">Prayer Facility</h2>
+        <p class="text-[15px]">We have Prayer facility for our player's and trainers.</p>
+      </div>
+      <div class="flex flex-col items-center text-center gap-5">
+        <div class="radial-progress text-green-500" style="--value:80; --size:6rem; --thickness: 10px;" role="progressbar"><p class="text-black font-extrabold text-2xl">95%</p></div>
+        <h2 class="font-bold">Experienced Coach</h2>
+        <p class="text-[15px]">We have experienced coach and personal trainers for our player's.</p>
+      </div>
+      <div class="flex flex-col items-center text-center gap-5">
+        <div class="radial-progress text-yellow-500" style="--value:80; --size:6rem; --thickness: 10px;" role="progressbar"><p class="text-black font-extrabold text-2xl">90%</p></div>
+        <h2 class="font-bold">Senior Player</h2>
+        <p class="text-[15px]">Our senior level players are always do well in the all tournaments</p>
+      </div>
+      <div class="flex flex-col items-center text-center gap-5">
+        <div class="radial-progress text-red-500" style="--value:80; --size:6rem; --thickness: 10px;" role="progressbar"><p class="text-black font-extrabold text-2xl">80%</p></div>
+        <h2 class="font-bold">Training Ground</h2>
+        <p class="text-[15px]">We have our personal playground for practice players in any times.</p>
+      </div>
+      
     </div>
   </div>
 </body>
