New Products section done

--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
               </svg>
             </div>
             <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-              <li><a>Item 1</a></li>
-              <li><a>Item 2</a></li>
-              <li><a>Item 3</a></li>
+              <li><a>Home</a></li>
+              <li><a>About</a></li>
+              <li><a>Pages</a></li>
+              <li><a>Blog</a></li>
+              <li><a>Contact</a></li>
             </ul>
           </div>
           <a class="text-2xl lg:text-3xl font-extrabold cursor-pointer">Hockey<span class="text-red-500">’</span>s</a>
@@ -58,8 +60,8 @@
     </nav>
 
     <!-- Banner section -->
-    <div class="container mx-auto px-2 relative">
-      <div class="carousel w-full lg:h-[550px] rounded-2xl  ">
+    <div class="container mx-auto pl-5 pr-3 lg:px-2 relative">
+      <div class="carousel w-full lg:h-[550px] rounded-2xl ">
         <div id="slide1" class="carousel-item relative w-full">
           <img src="Images/1.png" class="w-full" />
           <div
@@ -78,9 +80,9 @@
         </div>
       </div>
 
-      <div class="w-full lg:w-[540px]  bg-black text-white p-7 rounded-xl lg:absolute right-8 bottom-8">
-        <h2 class="font-bold text-xl lg:text-2xl pb-3">Meet all the heroes from the field</h2>
-        <p class="opacity-80">We are an inclusive hockey club that welcomes all who want to play hockey and be part of a
+      <div class="w-full lg:w-[540px]  bg-black text-white p-4 md:p-7 rounded-xl lg:absolute right-8 bottom-8">
+        <h2 class="font-bold text-lg lg:text-2xl pb-3">Meet all the heroes from the field</h2>
+        <p class="opacity-80 text-sm lg:text-base">We are an inclusive hockey club that welcomes all who want to play hockey and be part of a
           thriving local sports club.</p>
       </div>
 
@@ -88,13 +90,13 @@
   </header>
 
   <!-- Club section -->
-  <div class="clubSection container mx-auto px-10 py-8 lg:pt-20">
+  <div class="container mx-auto px-5 py-8 lg:pt-20">
     <div class="text-center flex flex-col items-center py-8 border-y-2 border-dashed">
       <h1 class="font-extrabold text-2xl lg:text-3xl pb-5">Professional Hockeys Club</h1>
       <p class="opacity-80 lg:w-[60%]">We are an inclusive hockey club that welcomes all who want to play hockey and be
         part of a thriving local sports club.</p>
     </div>
-    <div class="flex flex-col lg:flex-row gap-10 lg:gap-8 p-10 lg:px-0">
+    <div class="flex flex-col lg:flex-row gap-10 lg:gap-8 pt-10 px-10 lg:px-0">
       <div class="flex flex-col items-center text-center gap-5">
         <div class="radial-progress text-red-500" style="--value:80; --size:6rem; --thickness: 10px;" role="progressbar"><p class="text-black font-extrabold text-2xl">87%</p></div>
         <h2 class="font-bold">Prayer Facility</h2>
@@ -115,9 +117,251 @@
         <h2 class="font-bold">Training Ground</h2>
         <p class="text-[15px]">We have our personal playground for practice players in any times.</p>
       </div>
-      
     </div>
   </div>
+
+  <!-- Program Sections -->
+  <div class="container mx-auto py-5">
+    <div class="text-center flex flex-col items-center px-5 py-8 border-y-2 border-dashed">
+      <h1 class="font-extrabold text-2xl lg:text-3xl pb-5">Program Sections</h1>
+      <p class="opacity-80 lg:w-[60%]">With nine junior program, three professional program, a mixed side, a range of teenager program, various touring sides and Back to Hockey sessions, Hockey's Club offers hockey to players of any ability.</p>
+    </div>
+
+    <div class="py-10 px-5 flex flex-col lg:flex-row gap-5 w-full">
+    
+      <div class="relative w-full lg:w-1/2 mx-auto">
+        <img class="min-h-[260px] w-full object-cover rounded-2xl" src="Images/2.png" alt="Random image">
+        <div class="absolute inset-0 bg-black opacity-40 rounded-2xl"></div>
+        <div class="absolute inset-0 p-5 lg:p-8 lg:pt-[15%] xl:pt-[25%] flex flex-col  gap-4">
+            <h2 class="text-white text-2xl lg:text-3xl font-bold">Junior Program</h2>
+            <p class="text-white text-sm lg:text-base opacity-90">The Junior program provides a welcoming and social place to learn, have fun, make friends, and enjoy membership.</p>
+            <button class="btn btn-error text-white lg:text-xl text-sm w-32 lg:w-44 flex">Register Now!</button>
+        </div>
+      </div>
+
+      <div class="relative w-full lg:w-1/2 mx-auto">
+        <img class="min-h-[260px] w-full object-cover rounded-2xl" src="Images/3.png" alt="Random image">
+        <div class="absolute inset-0 bg-black opacity-40 rounded-2xl"></div>
+        <div class="absolute inset-0 p-5 lg:p-8 lg:pt-[15%] xl:pt-[25%] flex flex-col  gap-4">
+            <h2 class="text-white text-2xl lg:text-3xl font-bold">Teenager Program</h2>
+            <p class="text-white text-sm lg:text-base opacity-90">Hockey's Club teenager program aims to engage, challenge and inspire players of all abilities for them to achieve to the best of their ability or aspirations.</p>
+            <button class="btn btn-error text-white text-lg lg:text-xl text-sm w-32 lg:w-44 flex">Register Now!</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="px-5">
+      <div class=" relative w-full mx-auto">
+        <img class="min-h-[260px] w-full object-cover rounded-2xl" src="Images/4.png" alt="Random image">
+        <div class="px-5 absolute inset-0 bg-black opacity-40 rounded-2xl"></div>
+        <div class="absolute inset-0 p-8 lg:pt-[15%] xl:pt-[22%] flex flex-col  gap-4">
+            <h2 class="text-white text-2xl lg:text-3xl font-bold">Professional Program</h2>
+            <p class="text-white text-sm lg:text-base opacity-90 lg:w-[50%]">Hockey's Club has 10 professional teams for playing in competitive leagues. The section encourages juniors to play professional hockey when they are ready.</p>
+            <button class="btn btn-error text-white lg:text-xl text-sm w-32 lg:w-44 flex">Register Now!</button>
+        </div>
+  
+      </div>
+
+    </div>
+  </div>
+
+  <!-- New Products section -->
+  <div class="container mx-auto py-5">
+    <div class="text-center flex flex-col items-center px-5 py-8 border-y-2 border-dashed">
+      <h1 class="font-extrabold text-2xl lg:text-3xl pb-5">Our New Products</h1>
+      <p class="opacity-80 lg:w-[60%]">We provides high quality products for our players and club fans like club jacket, jersey, football, cap's and other products.</p>
+    </div>
+
+    <div class="pt-12 px-5 lg:px-2 w-full flex flex-col justify-center lg:flex-row gap-5">
+      <div class="p-5 lg:p-4 rounded-xl overflow-hidden flex flex-col md:flex-row shadow hover:shadow-md border bg-white cursor-pointer gap-5">
+        <img src="Images/5.png">
+        <div class="flex flex-col gap-4">
+          <div class="flex gap-4">
+            <div class="flex items-center gap-2">
+              <img class="size-4" src="Images/star.png" alt="star">
+              <p class="opacity-80 text-sm">5.0</p>
+            </div>
+            <div class="flex items-center gap-2">
+              <img class="size-5" src="Images/eye.png" alt="star">
+              <p class="opacity-80 text-sm">20</p>
+            </div>
+            <div class="flex items-center gap-2">
+              <img class="size-4" src="Images/love.png" alt="star">
+              <p class="opacity-80 text-sm">232</p>
+            </div>
+          </div>
+          <h2 class="font-extrabold text-lg">Hockey's club special jacket</h2>
+          <p class="opacity-80 text-sm">We provides high quality products for our players and club fans like club</p>
+          <div class="flex flex-col lg:flex-row lg:justify-between gap-3">
+            <h2 class="text-red-500 font-extrabold">Price-$22.00</h2>
+            <div class="flex items-center gap-2">
+              <img class="size-5" src="Images/bucket.png" alt="star">
+              <p class="opacity-80 text-sm">Delivery Fee:Free</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="p-5 lg:p-4 rounded-xl overflow-hidden flex flex-col md:flex-row shadow hover:shadow-md border bg-white cursor-pointer gap-5">
+        <img src="Images/6.png">
+        <div class="flex flex-col gap-4">
+          <div class="flex gap-4">
+            <div class="flex items-center gap-2">
+              <img class="size-4" src="Images/star.png" alt="star">
+              <p class="opacity-80 text-sm">5.0</p>
+            </div>
+            <div class="flex items-center gap-2">
+              <img class="size-5" src="Images/eye.png" alt="star">
+              <p class="opacity-80 text-sm">20</p>
+            </div>
+            <div class="flex items-center gap-2">
+              <img class="size-4" src="Images/love.png" alt="star">
+              <p class="opacity-80 text-sm">232</p>
+            </div>
+          </div>
+          <h2 class="font-extrabold text-lg">Club's special Football</h2>
+          <p class="opacity-80 text-sm">We provides high quality products for our players and club fans like club</p>
+          <div class="flex flex-col lg:flex-row lg:justify-between gap-3">
+            <h2 class="text-red-500 font-extrabold">Price-$16.00</h2>
+            <div class="flex items-center gap-2">
+              <img class="size-5" src="Images/bucket.png" alt="star">
+              <p class="opacity-80 text-sm">Delivery Fee:Free</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="pt-5 px-5 lg:px-2 w-full flex flex-col justify-center lg:flex-row gap-5">
+      <div class="p-5 lg:p-4 rounded-xl overflow-hidden flex flex-col md:flex-row shadow hover:shadow-md border bg-white cursor-pointer gap-5">
+        <img src="Images/7.png">
+        <div class="flex flex-col gap-4">
+          <div class="flex gap-4">
+            <div class="flex items-center gap-2">
+              <img class="size-4" src="Images/star.png" alt="star">
+              <p class="opacity-80 text-sm">5.0</p>
+            </div>
+            <div class="flex items-center gap-2">
+              <img class="size-5" src="Images/eye.png" alt="star">
+              <p class="opacity-80 text-sm">20</p>
+            </div>
+            <div class="flex items-center gap-2">
+              <img class="size-4" src="Images/love.png" alt="star">
+              <p class="opacity-80 text-sm">232</p>
+            </div>
+          </div>
+          <h2 class="font-extrabold text-lg">Cap for Hockey's</h2>
+          <p class="opacity-80 text-sm">We provides high quality products for our players and club fans like club</p>
+          <div class="flex flex-col lg:flex-row lg:justify-between gap-3">
+            <h2 class="text-red-500 font-extrabold">Price-$22.00</h2>
+            <div class="flex items-center gap-2">
+              <img class="size-5" src="Images/bucket.png" alt="star">
+              <p class="opacity-80 text-sm">Delivery Fee:Free</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="p-5 lg:p-4 rounded-xl overflow-hidden flex flex-col md:flex-row shadow hover:shadow-md border bg-white cursor-pointer gap-5">
+        <img src="Images/8.png">
+        <div class="flex flex-col gap-4">
+          <div class="flex gap-4">
+            <div class="flex items-center gap-2">
+              <img class="size-4" src="Images/star.png" alt="star">
+              <p class="opacity-80 text-sm">5.0</p>
+            </div>
+            <div class="flex items-center gap-2">
+              <img class="size-5" src="Images/eye.png" alt="star">
+              <p class="opacity-80 text-sm">20</p>
+            </div>
+            <div class="flex items-center gap-2">
+              <img class="size-4" src="Images/love.png" alt="star">
+              <p class="opacity-80 text-sm">232</p>
+            </div>
+          </div>
+          <h2 class="font-extrabold text-lg">Hockey's club jersey</h2>
+          <p class="opacity-80 text-sm">We provides high quality products for our players and club fans like club</p>
+          <div class="flex flex-col lg:flex-row lg:justify-between gap-3">
+            <h2 class="text-red-500 font-extrabold">Price-$16.00</h2>
+            <div class="flex items-center gap-2">
+              <img class="size-5" src="Images/bucket.png" alt="star">
+              <p class="opacity-80 text-sm">Delivery Fee:Free</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="pt-5 pb-10 px-5 lg:px-2 w-full flex flex-col justify-center lg:flex-row gap-5">
+      <div class="p-5 lg:p-4 rounded-xl overflow-hidden flex flex-col md:flex-row shadow hover:shadow-md border bg-white cursor-pointer gap-5">
+        <img src="Images/9.png">
+        <div class="flex flex-col gap-4">
+          <div class="flex gap-4">
+            <div class="flex items-center gap-2">
+              <img class="size-4" src="Images/star.png" alt="star">
+              <p class="opacity-80 text-sm">5.0</p>
+            </div>
+            <div class="flex items-center gap-2">
+              <img class="size-5" src="Images/eye.png" alt="star">
+              <p class="opacity-80 text-sm">20</p>
+            </div>
+            <div class="flex items-center gap-2">
+              <img class="size-4" src="Images/love.png" alt="star">
+              <p class="opacity-80 text-sm">232</p>
+            </div>
+          </div>
+          <h2 class="font-extrabold text-lg">Helmet for players</h2>
+          <p class="opacity-80 text-sm">We provides high quality products for our players and club fans like club</p>
+          <div class="flex flex-col lg:flex-row lg:justify-between gap-3">
+            <h2 class="text-red-500 font-extrabold">Price-$22.00</h2>
+            <div class="flex items-center gap-2">
+              <img class="size-5" src="Images/bucket.png" alt="star">
+              <p class="opacity-80 text-sm">Delivery Fee:Free</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="p-5 lg:p-4 rounded-xl overflow-hidden flex flex-col md:flex-row shadow hover:shadow-md border bg-white cursor-pointer gap-5">
+        <img src="Images/10.png">
+        <div class="flex flex-col gap-4">
+          <div class="flex gap-4">
+            <div class="flex items-center gap-2">
+              <img class="size-4" src="Images/star.png" alt="star">
+              <p class="opacity-80 text-sm">5.0</p>
+            </div>
+            <div class="flex items-center gap-2">
+              <img class="size-5" src="Images/eye.png" alt="star">
+              <p class="opacity-80 text-sm">20</p>
+            </div>
+            <div class="flex items-center gap-2">
+              <img class="size-4" src="Images/love.png" alt="star">
+              <p class="opacity-80 text-sm">232</p>
+            </div>
+          </div>
+          <h2 class="font-extrabold text-lg">World cup flags football</h2>
+          <p class="opacity-80 text-sm">We provides high quality products for our players and club fans like club</p>
+          <div class="flex flex-col lg:flex-row lg:justify-between gap-3">
+            <h2 class="text-red-500 font-extrabold">Price-$16.00</h2>
+            <div class="flex items-center gap-2">
+              <img class="size-5" src="Images/bucket.png" alt="star">
+              <p class="opacity-80 text-sm">Delivery Fee:Free</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+
+  <!-- Clients Question section -->
+  <div class="container mx-auto py-5">
+
+    <div class="text-center flex flex-col items-center px-5 py-8 border-y-2 border-dashed">
+      <h1 class="font-extrabold text-2xl lg:text-3xl pb-5">Clients Question</h1>
+      <p class="opacity-80 lg:w-[60%]">We provides high quality products for our players and club fans like club jacket, jersey, football, cap's and other products.</p>
+    </div>
+
+  </div>
+
 </body>
 
 </html>
