--- a/index.html
+++ b/index.html
@@ -360,7 +360,69 @@
       <p class="opacity-80 lg:w-[60%]">We provides high quality products for our players and club fans like club jacket, jersey, football, cap's and other products.</p>
     </div>
 
+    <div class="flex flex-col md:flex-row gap-5 mx-2 my-10 p-5 border rounded-2xl">
+      <img src="Images/11.png" alt="">
+      <div class="flex flex-col gap-2">
+        <div class="collapse collapse-plus bg-base-200">
+          <input type="radio" name="my-accordion-3" checked="checked" /> 
+          <div class="collapse-title text-xl font-bold">
+            Our Equipment
+          </div>
+          <div class="collapse-content"> 
+            <p>We provides high quality products for our players and club fans like club jacket, jersey, football, cap's and other products.</p>
+          </div>
+        </div>
+        <div class="collapse collapse-plus bg-base-200">
+          <input type="radio" name="my-accordion-3" /> 
+          <div class="collapse-title text-xl font-bold">
+            Hockey Training
+          </div>
+          <div class="collapse-content"> 
+            <p>We provides high quality products for our players and club fans like club jacket, jersey, football, cap's and other products.</p>
+          </div>
+        </div>
+        <div class="collapse collapse-plus bg-base-200">
+          <input type="radio" name="my-accordion-3" /> 
+          <div class="collapse-title text-xl font-bold">
+            Private Lessons
+          </div>
+          <div class="collapse-content"> 
+            <p>We provides high quality products for our players and club fans like club jacket, jersey, football, cap's and other products.</p>
+          </div>
+        </div>
+        <div class="collapse collapse-plus bg-base-200">
+          <input type="radio" name="my-accordion-3" /> 
+          <div class="collapse-title text-xl font-bold">
+            Ski Touring
+          </div>
+          <div class="collapse-content"> 
+            <p>We provides high quality products for our players and club fans like club jacket, jersey, football, cap's and other products.</p>
+          </div>
+        </div>
+        <div class="collapse collapse-plus bg-base-200">
+          <input type="radio" name="my-accordion-3" /> 
+          <div class="collapse-title text-xl font-bold">
+            Booking
+          </div>
+          <div class="collapse-content"> 
+            <p>We provides high quality products for our players and club fans like club jacket, jersey, football, cap's and other products.</p>
+          </div>
+        </div>
+        <div class="collapse collapse-plus bg-base-200">
+          <input type="radio" name="my-accordion-3" /> 
+          <div class="collapse-title text-xl font-bold">
+            Pricing
+          </div>
+          <div class="collapse-content"> 
+            <p>We provides high quality products for our players and club fans like club jacket, jersey, football, cap's and other products.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </div>
+
+  
 
 </body>
 
