--- a/index.html
+++ b/index.html
@@ -422,7 +422,114 @@
 
   </div>
 
-  
+  <!-- Get In Touch section -->
+  <div class="container mx-auto pb-5 px-5">
+    <div class="text-center flex flex-col items-center px-5 py-8 border-y-2 border-dashed">
+      <h1 class="font-extrabold text-2xl lg:text-3xl pb-5">Get In Touch</h1>
+      <p class="opacity-80 lg:w-[60%]">Our main priority is satisfied our students and customer. For students we always maintain our ground and check students health before training.</p>
+    </div>
+    <div class="py-10 flex flex-col md:flex-row justify-center items-center gap-5 xl:gap-10">
+      <div class="border rounded-2xl w-[90vw] md:w-[40vw] lg:w-[330px] xl:w-[30vw]  p-5 md:p-8">
+         <div class="bg-[#bced6d30] rounded-2xl p-8">
+          <img src="Images/12.png" alt="">
+          <p class="opacity-80 pt-5 pb-3">Phone Number :</p>
+          <h1 class="font-bold">(+62)123-321-456</h1>
+         </div>
+         <div class="bg-[#FDDD5F30] my-5 rounded-2xl p-8">
+          <img src="Images/13.png" alt="">
+          <p class="opacity-80 pt-5 pb-3">Email :</p>
+          <h1 class="font-bold">hockeys@support.com</h1>
+         </div>
+         <div class="bg-[#629CF330] rounded-2xl p-8">
+          <img src="Images/14.png" alt="">
+          <p class="opacity-80 pt-5 pb-3">Location :</p>
+          <h1 class="font-bold">152/1 Mohakhali Wireless Gate</h1>
+         </div>
+      </div>
+
+      <div class="flex flex-col gap-10">
+        <div class="flex flex-col lg:flex-row gap-4">
+          <div>
+            <h2 class="font-bold pb-2">Your Name</h2>
+            <input type="text" placeholder="Enter your full name" class="input input-bordered w-[90vw] md:w-[40vw] lg:w-[300px]" />
+          </div>
+          <div>
+            <h2 class="font-bold pb-2">Your Email</h2>
+            <input type="email" placeholder="Enter your full email" class="input input-bordered w-[90vw] md:w-[40vw] lg:w-[300px]" />
+          </div>
+        </div>
+        <div class="flex flex-col lg:flex-row gap-4">
+          <div>
+            <h2 class="font-bold pb-2">Subject</h2>
+            <input type="text" placeholder="Enter your subject" class="input input-bordered w-[90vw] md:w-[40vw] lg:w-[300px]" />
+          </div>
+          <div>
+            <h2 class="font-bold pb-2">Phone Number</h2>
+            <input type="number" placeholder="Enter your phone number" class="input input-bordered w-[90vw] md:w-[40vw] lg:w-[300px]" />
+          </div>
+        </div>
+        <div>
+          <h2 class="font-bold pb-2">Massage</h2>
+          <textarea class="textarea textarea-bordered w-full"  rows="8" placeholder="Write your message"></textarea>
+        </div>
+        <button class="btn btn-error text-white font-bold text-xl">Send Message</button>
+
+      </div>
+    </div>
+
+    <div class="flex flex-col items-center justify-center py-10 gap-5">
+      <h2 class="font-extrabold text-xl lg:text-2xl pb-2">Social Media</h2>
+      <div class="flex gap-8">
+        <img class="hover:scale-110" src="Images/15.png" alt="">
+        <img class="hover:scale-110" src="Images/16.png" alt="">
+        <img class="hover:scale-110" src="Images/17.png" alt="">
+        <img class="hover:scale-110" src="Images/18.png" alt="">
+      </div>
+    </div>
+
+  </div>
+
+  <!-- footer section -->
+  <footer class="flex flex-col md:flex-row items-center justify-center md:items-start md:justify-around p-10 bg-black text-white text-base-content py-24 gap-5 text-center md:text-start">
+    <aside>
+      <h1 class="text-2xl font-bold">Get In Touch</h1>
+      <p class="opacity-70 py-4 w-[300px]">Our main priority is satisfied our students and customer. For students we always maintain our ground and check students health before training.</p>
+      <div class="flex justify-center md:justify-normal gap-3">
+        <img src="Images/19.png" alt="">
+        <p class="opacity-70">hockey@support.com</p>
+      </div>
+      <div class="flex justify-center md:justify-normal gap-3">
+        <img src="Images/20.png" alt="">
+        <p class="opacity-70">(+62) 123-321-543</p>
+      </div>
+    </aside> 
+    <div class="flex flex-wrap justify-around w-full gap-5 pt-5 md:pt-0">
+      <nav class="flex flex-col gap-2 md:gap-5">
+        <h6 class="footer-title">Company</h6> 
+        <a class="link link-hover">About us</a>
+        <a class="link link-hover">Leadership</a>
+        <a class="link link-hover">Careers</a>
+        <a class="link link-hover">News & Article</a>
+        <a class="link link-hover">Legal Notice</a>
+      </nav> 
+      <nav class="flex flex-col gap-2 md:gap-5">
+        <h6 class="footer-title">Support</h6> 
+        <a class="link link-hover">Help Center</a>
+        <a class="link link-hover">FAQ</a>
+        <a class="link link-hover">Ticket Support</a>
+        <a class="link link-hover">Contact Us</a>
+      </nav>
+      <nav class="flex flex-col gap-2 md:gap-5">
+        <h6 class="footer-title">Services</h6> 
+        <a class="link link-hover">Academy</a>
+        <a class="link link-hover">Group Lesson</a>
+        <a class="link link-hover">Private Lesson</a>
+        <a class="link link-hover">Hockeys for kids</a>
+        <a class="link link-hover">Hockeys for Adult</a>
+      </nav> 
+
+    </div>
+  </footer>
 
 </body>
 
